tests/baselines/reference/project/nodeModulesMaxDepthExceeded/node/nodeModulesMaxDepthExceeded.errors.txt
maxDepthExceeded/root.ts(3,1): error TS2322: Type 'string' is not assignable to type 'number'.


==== entry.js (0 errors) ====
    var m3 = require("m3");
    
    module.exports = {
    	"a": 42,
    	"b": "hello, world",
    	"person": m3.person
    };
    
==== index.js (0 errors) ====
    var m2 = require('m2');
    
    /**
     * @param {string} p1 The first param
     */
    exports.f1 = function(p1) {
    	return 42;
    };
    
    exports.f2 = m2;
    
==== maxDepthExceeded/root.ts (1 errors) ====
    import * as m1 from "m1";
    m1.f1("test");
    m1.f2.a = "10"; // Error: Should be number
    ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    m1.f2.person.age = "10"; // OK if stopped at 2 modules: person will be "any".
    